Fixes horizontal scrolling by giving 95vw instead of 100vw

--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -5,13 +5,13 @@
 }
 .ultraboost-text-container,
 .ultraboost-empty-text-container {
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh; */
+  width: 95vw;
 
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 
   position: absolute;
   top: 32%;
@@ -177,7 +177,7 @@
   .ultraboost-text-container,
   .ultraboost-empty-text-container {
     /* display: none; */
-    margin-top: 10%;
+    margin-top: 20%;
   }
   .ultraboost-text,
   .ultraboost-empty-text {
